--- a/synth/fpga/de10lite-circular-convolution.qsf
+++ b/synth/fpga/de10lite-circular-convolution.qsf
@@ -430,5 +430,7 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[35]
 set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/serial_to_parallel.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/parallel_to_serial.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/circular_convolution.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/fxp_add.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/fxp_mult.sv
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
